<resources>
    <string name="app_name">Inventory</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register">Create New Account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="invalid_password_not_matched">Password does not match</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="title_activity_add_inventory">AddInventoryActivity</string>
    <string name="saving_failed">Error saving data</string>
    <string name="invalid_inventory_name">Inventory Name is invalid</string>
    <string name="invalid_quantity">Quantity is invalid</string>
    <string name="invalid_price">Price is invalid</string>
    <string name="action_login">Sign In</string>
    <string name="text_create_account">New User? Sign Up</string>
    <string name="text_forgot_pass">Forgot Password?</string>
    <string name="error_empty_email_field">Email field cannot be left empty</string>
    <string name="error_empty_password_field">Password field cannot be left empty</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_invalid_password">Password must be of 6 characters or more</string>
    <string name="msg_login_successful">Login Successful</string>
    <string name="title_activity_login">Login</string>
</resources>
